Bug 132754 - DOCX import: invalid list start numbering with 0.0.0.
Summary: DOCX import: invalid list start numbering with 0.0.0.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.0.0 target:6.4.5
Keywords: filter:docx
Depends on:
Blocks: DOCX-Lists-Direct-Formatting
  Show dependency treegraph
 
Reported: 2020-05-06 07:17 UTC by Vasily Melenchuk (CIB)
Modified: 2020-06-23 14:38 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
DOCX bugdoc (15.27 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-05-06 07:17 UTC, Vasily Melenchuk (CIB)
Details
Example from MS Word (12.94 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-05-06 20:10 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2020-05-06 07:17:09 UTC
Description:
-

Steps to Reproduce:
1. Open attached DOCX file
2. Look at numbering for paragraphs


Actual Results:
LO displays top level numbering correctly (starts "0") bug for nested levels numbering starts from "1". So in first paragraph we have "0.1.1"

Expected Results:
Word starts list from "0.0.0"


Reproducible: Always


User Profile Reset: No



Additional Info:
This is synthetic testcase created by just removing w:start and w:startAt parameters from list. So here is displayed and compared default list numbering in Word and LO.
Comment 1 Vasily Melenchuk (CIB) 2020-05-06 07:17:37 UTC
Created attachment 160415 [details]
DOCX bugdoc
Comment 2 Timur 2020-05-06 11:04:59 UTC
Hi. This is not correct bug report because DOCX is LO created. 
So please attach source ODT, in which case that would be Filesave issue.
Comment 3 Roman Kuznetsov 2020-05-06 20:10:55 UTC
Created attachment 160471 [details]
Example from MS Word
Comment 4 Roman Kuznetsov 2020-05-06 20:12:45 UTC
I added DOCX from MS Word. It should contains a list with

0.0.0.
0.0.1.
0.0.2.

but LibreOffice show us

1.1.1.
1.1.2.
1.1.3.
Comment 5 Commit Notification 2020-05-11 08:41:09 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8211e84a5239de25fe6dc45a4bb6b6f8673a1ee

tdf#132754: DOCX import: changed default list start nubmer

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-06-11 09:28:09 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/10abc94f9b3b223747f9dffd8d43f277343c8e1c

tdf#132754: DOCX import: changed default list start nubmer

It will be available in 6.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Timur 2020-06-11 12:01:14 UTC
Word shows attachment 160471 [details] as:
0.0.0.	A
0.0.1.	B
0.0.2.	C


LO 7.1+ shows:
            0.0.0. A
            0.0.1. B
            0.0.2. C

So I set Verified.
Comment 8 Commit Notification 2020-06-23 14:10:47 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-6-4-5":

https://git.libreoffice.org/core/commit/3c09eb16f4e0dea47839adbef66584a6e7bbca63

fix tdf#83309 tdf#120394 tdf#132754: squashed fix backport

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.